2011-08-09  Murray Cumming  <murrayc@murrayc.com>

	Print Layout: Make ruler markers follow moved items.

	* glom/mode_design/print_layouts/window_print_layout_edit.cc:
	on_selected_item_moved(): Show the top-left position of the group of 
	items, though maybe we should show just the moved item instead.
	Inkscape does not do this at all (it just shows the cursor position),
	so some other example would be nice.

2011-08-09  Murray Cumming  <murrayc@murrayc.com>

	Print Layout: Make ruler markers follow the cursor.

	* glom/mode_design/print_layouts/window_print_layout_edit.[h|cc]:
	Handle motion-notify-event so the rules track the cursor position.
	This is not very useful, but it feels nice, and is what other apps do.

2011-08-09  Murray Cumming  <murrayc@murrayc.com>

	Application: Remove unused member variable.

	* glom/application.[h|cc]: Remove m_pBoxSidebar.

2011-08-09  Murray Cumming  <murrayc@murrayc.com>

	Update the GimpRuler source copy.

	* glom/utility_widgets/gimpruler/gimpruler.[h|cc]:
	Updated from gimp's repository, from the gtk3-port branch.

2011-08-08  Murray Cumming  <murrayc@murrayc.com>

	Relationships Overview: Make snap to grid work.

	* glom/utility_widgets/canvas/canvas_editable.[h|cc]:
	Add associate_with_grid().
	* glom/mode_design/relationships_overview/dialog_relationships_over
	view.cc: draw_tables(): Use it so that the items' snap_position() 
	methods have a grid to snap to.
	The whole grid association/add idea is generally hacky, but this makes it 
	work.

2011-08-08  Murray Cumming  <murrayc@murrayc.com>

	Print Layout: Deselect all items when clicking on the background.

	* glom/print_layout/canvas_print_layout.[h|cc]: 
	set_page_setup(): Handle button-press-event signals on the background,
	deselecting any selected items.
	create_margin_line(): Do the same if the user manages to click on a 
	line instead.

2011-08-08  Murray Cumming  <murrayc@murrayc.com>

	Relationships Overview: Correct the packing in the dialog.
